fix text align in flash message, generate success messsage after user logged on

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -75,3 +75,7 @@ body {
     opacity: 0
   }
 }
+.alert {
+  margin-top: 10px;
+  text-align: center;
+}
